--- a/jobs/ethereum/application.properties
+++ b/jobs/ethereum/application.properties
@@ -1,11 +1,12 @@
 chain_name=ethereum
-max_number_partition=25
+max_number_partition=8
 max_time_run=1
 run_mode=backward
 start_number=0
 end_number=-1
 number_block_per_partition=300
 max_retry=10
+is_alert=true
 
 repair_mode=false
 repair_name=none
@@ -13,4 +14,3 @@ start_repair_number=0
 end_repair_number=-1
 number_index_columns=3
 is_vacuum=false
-origin_table=ethereum_origin.transaction_blocks
