--- a/jobs/binance/application.properties
+++ b/jobs/binance/application.properties
@@ -1,7 +1,7 @@
 chain_name=binance
 max_number_partition=4
 max_time_run=1
-run_mode=backward
+run_mode=forward
 start_number=0
 end_number=-1
 number_block_per_partition=300
