--- a/jobs/solana/application.properties
+++ b/jobs/solana/application.properties
@@ -1,10 +1,10 @@
 chain_name=solana
-max_number_partition=8
+max_number_partition=60
 max_time_run=1
-run_mode=forward
+run_mode=backward
 start_number=0
 end_number=-1
-number_block_per_partition=60
+number_block_per_partition=4
 max_retry=10
 is_alert=true
 
