--- a/jobs/sui/application.properties
+++ b/jobs/sui/application.properties
@@ -1,10 +1,10 @@
 chain_name=sui
-max_number_partition=60
+max_number_partition=1500
 max_time_run=1
-run_mode=backward
+run_mode=forward
 start_number=0
 end_number=-1
-number_block_per_partition=4
+number_block_per_partition=240
 max_retry=10
 is_alert=true
 
