--- a/jobs/bitcoin/application.properties
+++ b/jobs/bitcoin/application.properties
@@ -1,7 +1,7 @@
 chain_name=bitcoin
 max_number_partition=168
-max_time_run=1
-run_mode=backward
+max_time_run=4
+run_mode=forward
 start_number=0
 end_number=-1
 number_block_per_partition=6
