--- a/jobs/ethereum/application.properties
+++ b/jobs/ethereum/application.properties
@@ -1,5 +1,5 @@
 chain_name=ethereum
-max_number_partition=25
+max_number_partition=27
 max_time_run=10
 run_mode=forward
 start_number=0
@@ -9,7 +9,7 @@ max_retry=10
 is_alert=true
 
 repair_mode=false
-repair_name=none
+repair_name=repair_2
 start_repair_number=0
 end_repair_number=-1
 number_index_columns=3
