analyst for aave and seaport

--- a/jobs/bitcoin/application.properties
+++ b/jobs/bitcoin/application.properties
@@ -1,12 +1,13 @@
 chain_name=bitcoin
-max_number_partition=168
-max_time_run=4
+max_number_partition=25
+max_time_run=30
 run_mode=forward
 start_number=0
 end_number=-1
 number_block_per_partition=6
 max_retry=10
 is_alert=true
+number_partition_retention=-1
 
 repair_mode=false
 repair_name=none
