--- a/jobs/cex/application.properties
+++ b/jobs/cex/application.properties
@@ -6,6 +6,7 @@ end_number=-1
 number_block_per_partition=300
 max_retry=10
 is_alert=true
+number_partition_retention=-1
 
 repair_mode=false
 repair_name=none
