--- a/jobs/sui/application.properties
+++ b/jobs/sui/application.properties
@@ -7,6 +7,7 @@ end_number=-1
 number_block_per_partition=240
 max_retry=10
 is_alert=true
+number_partition_retention=-1
 
 repair_mode=false
 repair_name=none
