--- a/jobs/ethereum/application.properties
+++ b/jobs/ethereum/application.properties
@@ -1,12 +1,13 @@
 chain_name=ethereum
 max_number_partition=27
-max_time_run=10
+max_time_run=30
 run_mode=forward
 start_number=0
 end_number=-1
 number_block_per_partition=300
 max_retry=10
 is_alert=true
+number_partition_retention=43800
 
 repair_mode=false
 repair_name=repair_2
